--- a/src/style.css
+++ b/src/style.css
@@ -187,16 +187,18 @@ transform: rotate(-1deg);
     color: #2a096c;
 }
 .contentCard{
+    position: relative;
+    display: block;
     width: 100%;
     height: 100%;
     background: #655a7b;
+    margin: 0;
 }
 
 .title {
     display: block;
     padding-top: 2%;
     text-align: center;
-
 }
 .card1{
     display: block;
@@ -215,4 +217,52 @@ transform: rotate(-1deg);
 .wrapper{
     display: flex;
     justify-content: center;
+    padding-bottom: 2%;
+}
+.developers{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: #655a7b;
+
+}
+.developers h1{
+    padding: 3%;
+    text-align: center;
+}
+.card2{
+    display: block;
+    width: 20%;
+    height: 5%;
+    padding: 1%;
+   
+    margin-left: 2%;
+    margin-right: 2%;
+    border: thick double #e3e4eb;
+    border-radius: 10%;
+}
+.card2 img{
+    border-radius: 100%;
+}
+.footerTxt span{
+    letter-spacing: 2px;
+  font-size: 10px;
+    color: #3e1a85;
+}
+.wrapper_footer{
+    display: flex;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: 1%;
+    justify-content: space-between;
+}
+.footText{
+    
+}
+.footText a{
+  letter-spacing: 2px;
+  font-size: 10px;
+  color: #2a096c;
+  text-decoration: none;
 }
