--- a/src/style.css
+++ b/src/style.css
@@ -292,6 +292,10 @@ transform: rotate(-1deg);
     font-weight: bold;
   }
   .card_book:hover{
+    
+    cursor: pointer;
+  }
+  .book_active{
     background-color: rgba(224, 217, 217, 0.76);
     box-shadow: 8px 8px 1px 1px rgba(248, 245, 245, 0.76);
   }
@@ -301,11 +305,11 @@ transform: rotate(-1deg);
     gap: 0.8rem;
   }
   .li_case{
-    width: 15%;
+    width: 18%;
     height: 11%;
     padding: 1%;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 1%;
+    margin-right: 1%;
     border: thick double #e3e4eb;
     border-radius: 5%;
     background-color: rgba(255, 255, 255,0.760);
@@ -314,18 +318,18 @@ transform: rotate(-1deg);
   .li_case:hover{
     background-color: rgba(224, 217, 217, 0.76);;
     box-shadow: 8px 8px 1px 1px rgba(248, 245, 245, 0.76);
+    cursor: pointer;
   }
   .grid_container{
     display: flex;
     justify-content: space-between;
-    margin-left: 7%;
-    margin-right: 8%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   .word_card{
-    width: 50%;
-    
+    width: 40%;
     background: #09c162;
-   
+    
   }
   
   .namber_page{
@@ -377,6 +381,7 @@ transform: rotate(-1deg);
     -moz-border-radius: 100%;
     -webkit-border-radius: 100%;
     border-radius: 100%;
+    cursor: pointer;
   }
   .modal-3 a:hover {
     background-color: #4DAD16;
@@ -396,11 +401,11 @@ transform: rotate(-1deg);
   }
   .nx a{
     display: inline;
-    
     align-items: center;
     text-align: center;
    text-decoration: none;
    font-size: 40px;
+   cursor: pointer;
   }
 
   .prev{
