--- a/src/style.css
+++ b/src/style.css
@@ -317,7 +317,8 @@ transform: rotate(-1deg);
      font-size: 1em;
   }
   .li_case:hover{
-    
+    background-color: rgba(224, 217, 217, 0.76);;
+    box-shadow: 8px 8px 1px 1px rgba(248, 245, 245, 0.76);
     cursor: pointer;
   }
   .li_case_active{
@@ -419,11 +420,13 @@ transform: rotate(-1deg);
   }
   .voice_div{
     display: flex;
+    justify-content: space-between;
   }
-  /* .img_word{
-    
-    height: 200px;
-  }  */
+  
   .voice_button{
     cursor: pointer;
   }
+  #myAudio{
+  width: 30%;
+    
+  } 
