--- a/src/style.css
+++ b/src/style.css
@@ -776,17 +776,49 @@ color: red;
 }
 .res_card{
   display: none;
+  box-sizing: border-box;
+  
   position: absolute;
-  z-index: 1;
-  left: 350px;
-  width: 700px;
-  height: 230px;
+  
+  width: 1500px;
+  height: 580px;
+background-image: url(./img/sprint.jpg);
+background-repeat: no-repeat;
+background-position: top center;
+}
+.wrapper_card{
+  display: flex;
+  bottom: 0;
+    left: 500px;
+    padding: 10px;
+    position: fixed;
+    right: 0;
+    text-align: left;
+    z-index: 99;
+    margin-bottom: 20px;
+
+}
+.wrapper_card a{
+  margin-left: 20px;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+.score_card{
+  color: red;
+}
+.div_card{
+  display: block;
+  
   margin: auto;
   padding: auto;
-  align-items: center;
-background: #f3faf8;
+  text-align: center
 }
-.wrapper a{
-  margin-left: 20px;
-  
+.res_card h1{
+  font-size: 18px;
+  margin: 0;
+}
+.badWords {
+  font-size: 17px;
+  color: red;
+ 
 }
